- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.10
- 
    None
- 
        085d13f6ae3009bd157bfce6a062453d95298cbc
The layout in the following application is broken if layers are used:
import QtGraphicalEffects 1.0 import QtQuick 2.9 import QtQuick.Layouts 1.3 import QtQuick.Window 2.0 Window { id: window width: 300 height: 200 visible: true RowLayout { id: rowLayout width: 180 anchors.centerIn: parent Rectangle { implicitWidth: 80 implicitHeight: 30 color: "navajowhite" Layout.alignment: Qt.AlignLeft Layout.fillWidth: true } Rectangle { implicitWidth: 80 implicitHeight: 30 color: "navajowhite" Layout.alignment: Qt.AlignRight Layout.fillWidth: true layer.enabled: true layer.effect: Glow { color: "white" samples: 20 spread: 0.3 } } } Rectangle { anchors.fill: rowLayout color: "transparent" border.color: "black" } }
This table describes the results:
| code | result | 
|---|---|
| 
            layer.enabled: true
            layer.effect: Glow {
                color: "white"
                samples: 20
                spread: 0.3
            }
 |  | 
| // layer.enabled: true // layer.effect: Glow { // color: "white" // samples: 20 // spread: 0.3 // } |  | 
| // layer.enabled: true layer.effect: Glow { color: "white" samples: 20 spread: 0.3 } |  | 
| 
            layer.enabled: true
//            layer.effect: Glow {
//                color: "white"
//                samples: 20
//                spread: 0.3
//            }
 |  | 
- relates to
- 
                    QTBUG-31269 Item.layer: true inside Column triggers bad positioning -         
- Closed
 
-         
- 
                    QTBUG-63284 Layers break Imagine interaction effects -         
- Closed
 
-